Colaboratory를 통해 생성됨

--- a/hospital_Eda.ipynb
+++ b/hospital_Eda.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled24.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP0Tn+Aa3zE+zkS260Wzs0h",
+      "authorship_tag": "ABX9TyNXHlBhL9jIgXUmfH4PNqbq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,7 @@
       "metadata": {
         "id": "p7m7MebNfFUr"
       },
-      "execution_count": 6,
+      "execution_count": 103,
       "outputs": []
     },
     {
@@ -67,7 +67,7 @@
       "metadata": {
         "id": "Mcx0k8DD4dPw"
       },
-      "execution_count": 7,
+      "execution_count": 104,
       "outputs": []
     },
     {
@@ -76,37 +76,10 @@
         "require(dplyr)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ENdlkdK-40Ru",
-        "outputId": "20d54c1b-98a1-40b2-a923-21ef9df9b18e"
+        "id": "ENdlkdK-40Ru"
       },
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "Loading required package: dplyr\n",
-            "\n",
-            "\n",
-            "Attaching package: ‘dplyr’\n",
-            "\n",
-            "\n",
-            "The following objects are masked from ‘package:stats’:\n",
-            "\n",
-            "    filter, lag\n",
-            "\n",
-            "\n",
-            "The following objects are masked from ‘package:base’:\n",
-            "\n",
-            "    intersect, setdiff, setequal, union\n",
-            "\n",
-            "\n"
-          ]
-        }
-      ]
+      "execution_count": 105,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -307,23 +280,10 @@
         "require(stringr)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Nb6unYKz9v2P",
-        "outputId": "f452565f-7bb2-4877-a7d9-6f353c4b5160"
+        "id": "Nb6unYKz9v2P"
       },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "Loading required package: stringr\n",
-            "\n"
-          ]
-        }
-      ]
+      "execution_count": 106,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -333,7 +293,7 @@
       "metadata": {
         "id": "viqgMj-L96vg"
       },
-      "execution_count": 3,
+      "execution_count": 107,
       "outputs": []
     },
     {
@@ -344,7 +304,7 @@
       "metadata": {
         "id": "F5oTfxcR9uqC"
       },
-      "execution_count": 9,
+      "execution_count": 108,
       "outputs": []
     },
     {
@@ -358,9 +318,9 @@
           "height": 286
         },
         "id": "3wm9GH2A-sQ-",
-        "outputId": "a6767c29-f95a-4db1-8fb4-f5e19f28402e"
+        "outputId": "c5bea844-e616-4e96-e69c-8fd869482950"
       },
-      "execution_count": 11,
+      "execution_count": 109,
       "outputs": [
         {
           "output_type": "display_data",
@@ -918,11 +878,11 @@
         "  as.data.table() ->DT"
       ],
       "metadata": {
-        "id": "95JIE7eazhXW",
-        "outputId": "93808155-3fb4-47b1-a4fd-9cbca959ecc6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "95JIE7eazhXW",
+        "outputId": "93808155-3fb4-47b1-a4fd-9cbca959ecc6"
       },
       "execution_count": 80,
       "outputs": [
@@ -956,12 +916,12 @@
         "  na.omit()"
       ],
       "metadata": {
-        "id": "wrUME2Yr6jwT",
-        "outputId": "3505957a-e99d-4a79-fd45-3098067b3e22",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 648
-        }
+        },
+        "id": "wrUME2Yr6jwT",
+        "outputId": "3505957a-e99d-4a79-fd45-3098067b3e22"
       },
       "execution_count": 102,
       "outputs": [
@@ -1093,6 +1053,114 @@
       ],
       "metadata": {
         "id": "_Mi-tJPGqYf6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 날짜 파싱"
+      ],
+      "metadata": {
+        "id": "1JSr7iENSvsN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#require(lubridate)\n",
+        "#require(ggplot2)\n",
+        "install.packages(\"ggridges\")\n",
+        "library(ggridges)"
+      ],
+      "metadata": {
+        "id": "9J-RFI-TUV9b",
+        "outputId": "41d575dc-7b3c-4c0e-b102-14a7f646a0db",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 113,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Installing package into ‘/usr/local/lib/R/site-library’\n",
+            "(as ‘lib’ is unspecified)\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df %>% month(yyyymmdd)"
+      ],
+      "metadata": {
+        "id": "0_UHkQZwURCs",
+        "outputId": "34364af4-1324-47a9-e99a-b9cd4f61d84a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 269
+        }
+      },
+      "execution_count": 115,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ERROR",
+          "evalue": "ignored",
+          "traceback": [
+            "Error in as.POSIXlt.default(x, tz = tz(x)): do not know how to convert 'x' to class “POSIXlt”\nTraceback:\n",
+            "1. df %>% month(yyyymmdd)",
+            "2. month(., yyyymmdd)",
+            "3. month.default(., yyyymmdd)",
+            "4. month(as.POSIXlt(x, tz = tz(x))$mon + 1, label, abbr, locale = locale)",
+            "5. as.POSIXlt(x, tz = tz(x))",
+            "6. as.POSIXlt.default(x, tz = tz(x))",
+            "7. stop(gettextf(\"do not know how to convert '%s' to class %s\", \n .     deparse1(substitute(x)), dQuote(\"POSIXlt\")), domain = NA)"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n",
+        "\n",
+        "ggplot(akl_daily, aes(x = max_temp, y = month, height = ..density..)) +\n",
+        "  geom_density_ridges(stat = \"density\")"
+      ],
+      "metadata": {
+        "id": "LCL3PZMGSzdn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "###############에스키스\n",
+        "getwd()\n",
+        "setwd(\"C:/Users/alsdu/Downloads\")\n",
+        "df=read.csv(\"hospital_rename.csv\")\n",
+        "library(dplyr)\n",
+        "\n",
+        "install.packages(\"esquisse\")\n",
+        "library(esquisse)\n",
+        "\n",
+        "\n",
+        "esquisser()\n",
+        "\n",
+        "\n",
+        "End(Not run)"
+      ],
+      "metadata": {
+        "id": "z8V-6QBbXplv"
       },
       "execution_count": null,
       "outputs": []
