--- a/ASOS데이터.ipynb
+++ b/ASOS데이터.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled24.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNjq+FTzRm/+/WnVAIdXPHr",
+      "authorship_tag": "ABX9TyPUJr74rrvB2htkYoVQk76d",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -618,13 +618,27 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "ㅓ"
       ],
       "metadata": {
-        "id": "vWp4GymgveKc"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 101
+        },
+        "id": "vWp4GymgveKc",
+        "outputId": "21e191f5-bc7a-4a3b-a108-959c7e49107e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ERROR",
+          "evalue": "ignored",
+          "traceback": [
+            "Error in eval(expr, envir, enclos): object 'ㅓ' not found\nTraceback:\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
