예보데이터 최종 전처리

--- a/예보_2012_2016.ipynb
+++ b/예보_2012_2016.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "예보_2012:2016.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMTJk6UiSpPWyB3c1vnnbmm",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyOKwct72XHLG/B0haQY2eNz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -231,7 +232,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 3.결측치 대체\n",
+        "# 2.결측치 대체\n",
         "- 그룹별(area)로 칼만 알고리즘 적용 "
       ],
       "metadata": {
@@ -320,7 +321,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 4.저장"
+        "# 3.저장"
       ],
       "metadata": {
         "id": "jM0sakR-BxLT"
